2007-03-20 [colin]	2.8.1cvs24

	* src/account.c
		Write folderlist after adding/deleting accounts
		that have folders

2007-03-20 [colin]	2.8.1cvs23

	* src/imap.c
	* src/remotefolder.h
		Fix bug 1153, 'CM segfaults if IMAP folder is 
		selected while scanning prior to update'

2007-03-17 [paul]	2.8.1cvs22

	* src/main.c
		fix a typo, and be a little more verbose.

2007-03-17 [wwp]	2.8.1cvs21

	* src/inc.c
		Fix a compiler warning.

2007-03-16 [wwp]	2.8.1cvs20

	* tools/Makefile.am
	* tools/README
		Updated to deal w/ the new mairix.sh tool.

2007-03-16 [wwp]	2.8.1cvs19

	* src/action.c
		Fix logics issues around the action IO dialog:
		- disable entry widget and exec button when
		  the exec button is clicked (don't wait for any
		  output line) - fix possible disabling/re-enabling/
		  re-disabling of those widgets
		- raise an error if executing a %as{} action either
		  empty or invalid, instead of failing silently
		- don't close the dialog if the abort button has been
		  clicked and if there was no output yet
		- set focus to the abort button when the exec button
		  is clicked
		- fix capitalization of a warning message

2007-03-16 [wwp]	2.8.1cvs18

	* tools/mairix.sh
		Added a wrapper to mairix to the tools folder.

2007-03-16 [colin]	2.8.1cvs17

	* src/messageview.c
	* src/mimeview.h
		Allow mimeviewer plugins to print
		their stuff

2007-03-16 [colin]	2.8.1cvs16

	* .cvsignore
		Ignore *.patchset

2007-03-15 [colin]	2.8.1cvs15

	* src/messageview.c
	* src/mimeview.h
		Add a way for mimeviewer plugins to
		implement body search

2007-03-15 [paul]	2.8.1cvs14

	* src/prefs_spelling.c
		fix English usage

2007-03-15 [paul]	2.8.1cvs13

	* src/common/quoted-printable.c
		fix decoding of quoted-printable parts

2007-03-14 [wwp]	2.8.1cvs12

	* src/gtk/logwindow.h
		Oops, remove that devel stuff committed w/ 2.8.1cvs11 :\.

2007-03-14 [wwp]	2.8.1cvs11

	* src/gtk/logwindow.h
		Complete 2.8.1cvs10.

2007-03-14 [colin]	2.8.1cvs10

	* src/gtk/logwindow.c