@@ -2441,3 +2441,4 @@
 ( cvs diff -u -r 1.115.2.142 -r 1.115.2.143 src/main.c;  ) > 2.8.1cvs22.patchset
 ( cvs diff -u -r 1.179.2.158 -r 1.179.2.159 src/imap.c;  cvs diff -u -r 1.1.4.6 -r 1.1.4.7 src/remotefolder.h;  ) > 2.8.1cvs23.patchset
 ( cvs diff -u -r 1.61.2.59 -r 1.61.2.60 src/account.c;  ) > 2.8.1cvs24.patchset
+( cvs diff -u -r 1.213.2.135 -r 1.213.2.136 src/folder.c;  cvs diff -u -r 1.87.2.37 -r 1.87.2.38 src/folder.h;  cvs diff -u -r 1.105.2.87 -r 1.105.2.88 src/prefs_account.c;  cvs diff -u -r 1.1.2.51 -r 1.1.2.52 src/wizard.c;  ) > 2.8.1cvs25.patchset
